[package]
name = "tiggit-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "process", "io-util"] }
tower-http = { version = "0.5.2", features = ["tracing", "trace"] }
tracing-subscriber = "0.3.18"
